[package]
name        = "eAS"
version     = "0.3.0"
authors     = ["Gabriel Bjørnager Jensen"]
edition     = "2021"
description = "The Embedded Assembler."
repository  = "https://mandelbrot.dk/eas"

[[bin]]
name = "eas"
path = "src/eas.rs"

[profile.release]
codegen-units = 1
lto           = "fat"

[dependencies]
enum-iterator = "1.5.0"
